2012-06-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/fshelp.c (grub_fshelp_find_file): Don't free oldnode if
	it's equal to currnode. This can happen with "" symlink.

2012-06-27  Yves Blusseau <blusseau@zetam.org>

	* util/grub-mkconfig_lib.in: Fix print messages replacing builtin
	echo shell command by printf command.

2012-06-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/arc/console.c (grub_console_init_output): Add one since
	the value returned by firmware is the maximal position, not diumension.
	(grub_terminfo_output_state): Use a more sane fallback.

2012-06-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/terminfo.c (print_terminfo): Print terminal dimensions.

2012-06-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mips/arc/init.c (grub_machine_init): Set clock
	frequency to 150 MHz.

2012-06-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Apple fixes.

	* grub-core/lib/i386/relocator16.S: Use correct __APPLE__ and not
	__APPLE_
	* grub-core/lib/i386/relocator_common.S [__APPLE__]: Fix gdtdesc
	definition.
	* grub-core/lib/i386/relocator64.S [__APPLE__]: Assemble jmp manually.

2012-06-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Handle slash in HFS label.

	* grub-core/fs/hfs.c (macroman_to_utf8): New argument slash_translate.
	(grub_hfs_dir): Tanslate slash.
	(grub_hfs_label): Don't translate slash.

2012-06-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/ls.c (grub_ls_list_devices): Disable
	network protocol listing since it introduces problematic dependency on
	net module.

2012-06-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c (generate_image): Add Yeeloong verified hash.

2012-06-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Init video early on yeeloong to avoid being rebooted by watchdog.

	* grub-core/Makefile.am (gensm712): New target.
	(sm712_start.S): Likewise.
	(boot/mips/loongson/fwstart.S): Depend on sm712_start.S